--- a/xyz_bank/code/index.html
+++ b/xyz_bank/code/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>RBS Customer Dashboard</title>
+    <title>XYZ Customer Dashboard</title>
     <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/colors/blue.css" id="theme" rel="stylesheet">
@@ -144,7 +144,7 @@
             </div>
             
             <footer class="footer text-center">
-                © 2018 Chennai
+                © 2018 XYZ Bank
             </footer>
         </div>
     </div>
