--- a/xyz_bank/code/index.html
+++ b/xyz_bank/code/index.html
@@ -33,7 +33,7 @@
                         </b>
                     </a>
                 </div>
-                <div class="navbar-collapse">
+                <div ng-cloak class="navbar-collapse">
                     <ul class="navbar-nav mr-auto mt-md-0 ">
                         <li class="nav-item"> <a class="nav-link nav-toggler hidden-md-up text-muted waves-effect waves-dark" href="javascript:void(0)"><i class="ti-menu"></i></a> </li>
                         <li class="nav-item hidden-sm-down">
@@ -50,7 +50,7 @@
             </nav>
         </header>
         <aside class="left-sidebar">
-            <div class="scroll-sidebar" >
+            <div ng-cloak class="scroll-sidebar" >
                 <nav class="sidebar-nav text-themecolor"  >
                     <table id="sidebarnav" style = "text-align:left;">
                                     <tr>
